# Boardgames

./: .gitignore  .gitmodules  Boardgames Library.sln  CMakeLists.txt  README.md  Tabletop.sln  build.bat  to_be_reimplemented.7z
ArkhamHorrorCore/: ArkhamHorrorCore.csproj  Common.cs  Monster.cs  Neighborhood.cs
ArkhamHorrorCore/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
ArkhamHorrorCore/Resources/Decks/: Downtown.xml
ArkhamHorrorCore/Resources/Monsters/: Cultist.xml  Dark Young.xml  Dimensional Shambler.xml  God of the Bloody Tongue.xml
Boardgames/: CMakeLists.txt  README.md
Boardgames/checkerboard/: CMakeLists.txt
Boardgames/checkerboard/src/: checkerboard.cpp
Boardgames/checkerboard_canada/: CMakeLists.txt
Boardgames/checkerboard_canada/inc/: checker_canada.h
Boardgames/checkerboard_canada/src/: checker_canada.cpp
Boardgames/checkerboard_international/: CMakeLists.txt
Boardgames/checkerboard_international/src/: checker_international.cpp
Boardgames/checkerboard_italian/: CMakeLists.txt
Boardgames/checkerboard_italian/inc/: checker_italy.h
Boardgames/checkerboard_italian/src/: checker_italy.cpp
Boardgames/chessboard/: CMakeLists.txt
Boardgames/chessboard/src/: chessboard.cpp  pieces.cpp
Boardgames/grid/: CMakeLists.txt
Boardgames/grid/test/: test_grid.cpp
Boardgames/hexgrid/: CMakeLists.txt
Boardgames/squaregrid/: CMakeLists.txt
Boardgames/squaregrid/inc/: add_headers.in
CardDeck/: Card.cs  CardDeck.csproj  Deck.cs
CardDeck/Properties/: AssemblyInfo.cs
Cardgames/: CMakeLists.txt  README.md
Checkerboard/: CMakeLists.txt  checkerboard.cpp  checkerboard.h
Checkerboard_Canada/: CMakeLists.txt  checker_canada.cpp  checker_canada.h
Checkerboard_International/: CMakeLists.txt  checker_international.cpp  checker_international.h
Checkerboard_Italian/: CMakeLists.txt  checker_italy.cpp  checker_italy.h
Chessboard/: CMakeLists.txt  chessboard.cpp  chessboard.h  pieces.cpp  pieces.h
Common/CardDeck/: Suit.cs
Common/Utils/: NumericUtils.cs
Games/ArkhamHorror/ArkhamHorrorCore/: Area.cs  ArkhamHorrorCore.csproj  Core.cs  Investigator.cs  Location.cs  Monster.cs  Neighborhood.cs
Games/ArkhamHorror/ArkhamHorrorCore/Properties/: Resources.Designer.cs
Games/ArkhamHorror/ArkhamHorrorCoreTests/: ArkhamHorrorCoreTests.csproj  MonsterTests.cs
Games/ArkhamHorror/ArkhamHorrorCoreTests/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
Games/ArkhamHorror/ArkhamHorrorCoreTests/Resources/: God of the Bloody Tongue.xml
Games/ArkhamHorror/Assets/Monsters/: Byakhee.xml  Cultist.xml  God of the Bloody Tongue.xml
Games/ArkhamHorror/Resources/Monsters/: Chtonian.xml
Grid/: CMakeLists.txt  Cell.cpp  Cell.h  Coordinates.cpp  Coordinates.h  Grid.cpp  Grid.h  Grid.vcxproj  test_grid.cpp
HexGrid/: CMakeLists.txt  hex_grid.cpp
SquareGrid/: CMakeLists.txt  square_grid.cpp  square_grid.h
Utilities/: CMakeLists.txt  README.md
Utilities/card/: CMakeLists.txt
Utilities/deck/: CMakeLists.txt
Utilities/die/: CMakeLists.txt
Utilities/hand/: CMakeLists.txt
Utils/: Utils.csproj
Utils/Properties/: AssemblyInfo.cs
src/Boardgames/: CMakeLists.txt  NOTES.md
src/Boardgames/checkerboard/: CMakeLists.txt
src/Boardgames/checkerboard/src/: checkerboard.h
src/Boardgames/checkerboard_canada/: CMakeLists.txt
src/Boardgames/checkerboard_international/: CMakeLists.txt
src/Boardgames/checkerboard_international/src/: checker_international.h
src/Boardgames/checkerboard_italian/: CMakeLists.txt
src/Boardgames/checkerboard_italian/src/: add_sources.in  checker_italy.h
src/Boardgames/chessboard/: CMakeLists.txt
src/Boardgames/chessboard/src/: chessboard.h  pieces.h
src/Cardgames/: CMakeLists.txt  README.md
src/Cardgames/sbregacamesa/: CMakeLists.txt
src/Cardgames/sbregacamesa/src/: sbregacamesa.cpp  sbregacamesa.h
src/Cardgames/sbregacamesa/test/: test.cpp
src/Cardgames/sbregaciamesa/: CMakeLists.txt
src/Cardgames/sbregaciamesa/src/: sbregaciamesa.cpp  sbregaciamesa.h
src/Cardgames/sbregaciamesa/test/: CMakeLists.txt  edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  main.cpp  node.cpp  node.h  test.cpp
src/Utilities/: CMakeLists.txt
src/Utilities/card/: CMakeLists.txt
src/Utilities/card/src/: card.cpp  card.h
src/Utilities/deck/: CMakeLists.txt
src/Utilities/deck/src/: deck.cpp  deck.h
src/Utilities/dice/: CMakeLists.txt
src/Utilities/dice/src/: dice.cpp  dice.h
src/Utilities/die/: CMakeLists.txt
src/Utilities/die/src/: die.cpp  die.h
src/Utilities/grid/: CMakeLists.txt
src/Utilities/grid/src/: Cell.h  Coordinates.h  Grid.h  common.h
src/Utilities/hexgrid/: CMakeLists.txt
src/Utilities/squaregrid/: CMakeLists.txt
src/Utilities/squaregrid/src/: square_grid.h
