cmake_minimum_required (VERSION 3.3 FATAL_ERROR)

set (PROJECT_NAME  Chessboard)
project (${PROJECT_NAME} CXX C)

set (${PROJECT_NAME}_VERSION_MAJOR 0)
set (${PROJECT_NAME}_VERSION_MINOR 1)

#project sources
file(GLOB_RECURSE PROJECT_SOURCES "*.cpp")
file(GLOB_RECURSE PROJECT_HEADERS "*.h")

#include directory
set (PROJECT_INCLUDE_DIRS "")
foreach (_headerFile ${PROJECT_HEADERS})
    get_filename_component(_dir ${_headerFile} PATH)
    list (APPEND PROJECT_INCLUDE_DIRS ${_dir})
endforeach()
list(APPEND PROJECT_INCLUDE_DIRS ../Grid)
list(APPEND PROJECT_INCLUDE_DIRS ../SquareGrid)
list(APPEND PROJECT_INCLUDE_DIRS ../Checkerboard)
list(REMOVE_DUPLICATES PROJECT_INCLUDE_DIRS)

include_directories(${PROJECT_INCLUDE_DIRS})

message(STATUS "--------- ${PROJECT_NAME} ---------")
message(STATUS "SOURCES = ${PROJECT_SOURCES}")
message(STATUS "HEADERS = ${PROJECT_HEADERS}")
message(STATUS "INCLUDE = ${PROJECT_INCLUDE_DIRS}")

add_library(${PROJECT_NAME} 
  SHARED 
  ${PROJECT_SOURCES} 
  ${PROJECT_HEADERS} 
)

target_link_libraries( ${PROJECT_NAME} 
	Checkerboard
)

set_target_properties(
	${PROJECT_NAME}
	PROPERTIES
	DEBUG_OUTPUT_NAME ${PROJECT_NAME}_d
	RELEASE_OUTPUT_NAME ${PROJECT_NAME}
	PUBLIC_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.h"
	COMPILE_FLAGS ""
)

install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}
	RUNTIME DESTINATION bin COMPONENT Runtime
  LIBRARY DESTINATION lib COMPONENT Runtime
	ARCHIVE DESTINATION lib COMPONENT Runtime
	PUBLIC_HEADER DESTINATION include COMPONENT Runtime
)
